# proofpoint-itm-sdk

./: .gitignore  pyproject.toml
proofpoint_itm_sdk/: itm.py
proofpoint_itm_sdk/infras/: auth.py  report.py
proofpoint_itm_sdk/lib/: api.py
tests/: test_proofpoint_itm_sdk.py
